# cpp-build-setup

./: .gitignore  CMakeLists.txt  Read Me.md  ReadMe.md
include/: example.h
src/: example.cpp
